Move to the (JDK11+) Doclet API (#166)