@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.ibissource</groupId>
 		<artifactId>frank-doc-parent</artifactId>
-		<version>1.2-SNAPSHOT</version>
+		<version>2.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>frank-doc-doclet</artifactId>
@@ -101,7 +101,14 @@
 					<includes>
 						<include>**/*.java</include>
 					</includes>
-					<argLine>@{argLine} -Dfile.encoding=UTF-8</argLine>
+					<argLine>@{argLine} -Dfile.encoding=UTF-8
+						--add-exports jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED
+						--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+						--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+						--add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+						--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+						--add-exports jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED
+					</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -151,10 +158,21 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.1</version>
 					<configuration>
 						<source>${maven.compiler.source}</source>
 						<target>${maven.compiler.target}</target>
+						<compilerArgs>
+							<arg>--add-exports</arg>
+							<arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</arg>
+						</compilerArgs>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -188,10 +206,16 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>3.2.0</version>
+					<version>3.6.0</version>
 					<configuration>
 						<doclint>none</doclint>
 						<useStandardDocletOptions>true</useStandardDocletOptions>
+						<additionalOptions>
+							<additionalOption>--add-exports</additionalOption>
+							<additionalOption>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</additionalOption>
+							<additionalOption>--add-exports</additionalOption>
+							<additionalOption>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</additionalOption>
+						</additionalOptions>
 					</configuration>
 					<executions>
 						<execution>
@@ -250,14 +274,6 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.30</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.sun</groupId>
-			<artifactId>tools</artifactId>
-			<version>1.8</version>
-			<scope>provided</scope>
-			<!-- <systemPath>${java.home}/../lib/tools.jar</systemPath> -->
 		</dependency>
 	</dependencies>
 
